Pm4Lean/Models/Petri/Semantics/FiringSequence/Cuts/SampleCoverage/Predecessor/Cut/Projection/Samples/Coordinates/Cover/Greedy/GoodPair/Negative/Order/Basic.lean
import Pm4Lean.Models.Petri.Semantics.FiringSequence.Cuts.SampleCoverage.Predecessor.Cut.Projection.Samples.Coordinates.Cover.Greedy.GoodPair.Negative.Order.Impossible
import Pm4Lean.Models.Petri.Semantics.FiringSequence.Cuts.SampleCoverage.Predecessor.Cut.Projection.Samples.Coordinates.Cover.Greedy.GoodPair.Negative.Order.Greater
